# synping

./: .gitignore  LICENSE  MANIFEST  Makefile  README.md  README.rst  pyproject.toml  setup.py  synping.py  test_synping.py
.github/workflows/: ci.yml  release.yml
synping/: synping.py
